--- a/web-frontend/modules/core/locales/en.json
+++ b/web-frontend/modules/core/locales/en.json
@@ -220,8 +220,8 @@
     },
     "dashboard": {
         "title": "Dashboard",
-        "alertTitle": "We need your help!",
-        "alertText": "If you find Baserow useful then sponsoring, starring or sharing us is greatly appreciated. By sponsoring us on GitHub you will get early access to the premium features!",
+        "alertTitle": "Count Your Carbon Footprint with Nika!",
+        "alertText": "If you find Nika useful then sponsoring, starring or sharing us is greatly appreciated. By sponsoring us on GitHub you will get early access to the premium features!",
         "tweetContent": "Check out @baserow an open source no-code database tool and Airtable alternative!",
         "redditTitle": "'Baserow - An open source no-code database",
         "noGroupTitle": "No groups found",
